tests/errors/positional_after_named.vt
fn f(a: int, b: int) {} fn main(){ f(a: 1, 2); }
